seeqt/QtCore/gen_qcryptographichash.h

class QCryptographicHash;
class QIODevice;
typedef struct QCryptographicHash QCryptographicHash;
typedef struct QIODevice QIODevice;
QCryptographicHash* QCryptographicHash_new(int method);
void QCryptographicHash_reset(QCryptographicHash* self);
void QCryptographicHash_addData(QCryptographicHash* self, const char* data, int length);
void QCryptographicHash_addDataWithData(QCryptographicHash* self, struct miqt_string data);
bool QCryptographicHash_addDataWithDevice(QCryptographicHash* self, QIODevice* device);
struct miqt_string QCryptographicHash_result(const QCryptographicHash* self);
struct miqt_string QCryptographicHash_hash(struct miqt_string data, int method);
int QCryptographicHash_hashLength(int method);
void QCryptographicHash_delete(QCryptographicHash* self);